k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: automaton-loadbalancer
  namespace: automaton
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: frontend
    component: ui
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
