k8s/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: automaton-nodeport
  namespace: automaton
spec:
  selector:
    app: frontend
    component: ui
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
  type: NodePort
