k8s/production-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: automaton-frontend-lb
  namespace: automaton
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-default-protocol: "http"
    service.beta.kubernetes.io/linode-loadbalancer-throttle: "1000"
spec:
  selector:
    app: frontend
    component: ui
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: automaton-backend-lb
  namespace: automaton
  annotations:
    service.beta.kubernetes.io/linode-loadbalancer-default-protocol: "http"
    service.beta.kubernetes.io/linode-loadbalancer-throttle: "1000"
spec:
  selector:
    app: backend
    component: api
  ports:
  - name: api
    port: 5555
    targetPort: 5555
    protocol: TCP
  type: LoadBalancer
